@@ -8,6 +8,7 @@ version 0.02:
 	Improvements:
 	- website-url check starts on <enter>
 	- friendlier delete message
+	- add Contracts and Services
 
 version 0.01: Wed 09 Sep 12:07:38 CEST 2024
 	- initial release
